Gen missing lootTables. Cleaned up analyze warnings.